# adventofcode2024

./: .gitignore  Dijkstra.hs  Grid.hs  GridItem.hs  Node.hs  day-4.js
day1/: part1.hs  part2.hs
day10/: main.hs
day11/: main.hs
day12/: main.hs
day13/: main.hs
day14/: main.hs
day15/: main.hs  part1.hs  part2.hs  utils.hs
day16/: Dijkstra.hs  Direction.hs  Journey.hs  Maze.hs  Path.hs  Position.hs  Score.hs  cabal.project.local  day16.cabal  day16.prof  ghc-9.4.8.hp  main.hs  test3.txt  test4.txt  test7.txt  test8.txt  test9.txt
day17/: main.c  main.hs  notes.txt
day18/: Dijkstra.hs  Maze.hs  Utils.hs  input.txt  main.hs  test.txt
day19/: main.hs  test2.txt
day2/: Main.hs
day20/: Dijkstra.hs  Maze.hs  Utils.hs  main.hs
day21/: Dijkstra.hs  DirectionalKeypad.hs  GridItem.hs  Node.hs  NumericKeypad.hs  main.hs
day22/: main.hs
day23/: main.hs
day3/: Main.hs
day5/: main.hs
day6/: main.hs
day7/: main.hs
day8/: main.hs
day9/: main.hs
template/: main.hs
