cabal-version:   3.0
name:            day16
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day16
    import:           warnings
    main-is:          Main.hs
    default-extensions:
        DeriveGeneric,
        GeneralizedNewtypeDeriving,
        ImportQualifiedPost,
        InstanceSigs,
        NumericUnderscores
    build-depends:
        base ^>=4.17.2.1,
        containers ^>=0.6.0.0,
        deepseq ^>=1.4.8.0,
        parallel ^>=3.2.2.0
    hs-source-dirs:   .
    default-language: Haskell2010
    other-modules: Maze, Path, Position
